2004-08-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_print set_output):  Do not chop whitespace from the
	front of input string; it causes a segfault when the string is freed.
	If we really need to strip whitespace from filenames, it should be done
	in a routine shared by all callers.

2004-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/graphics.c (place_arrows): Restore default text color after
	drawing all the arrows. Fixes bug #1004765.

2004-08-02  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm src/term.h configure.in src/show.c (show_version):
	GIF support is back in libgd as of version 2.0.28 (July 2004).
	At last we can use the same driver for png, gif, and jpeg.

	* term/gif.trm term/png.trm:  Remove these old drivers.

	* src/makefile.all docs/Makefile.in: And remove them as make targets.

	* src/command.h src/command.c (load_command): Remove macro that was
	used in only one place; clean up code order as prep for applying
	string variable patches.

2004-08-01  Ethan Merritt  <merritt@u.washington.edu>
            Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Introduce a boolean value PSLevel2 into the PostScript
	prolog, and use it to determine whether pattern-fill is defined using
	PostScript Level 2 primitives or via a Level 1 solid fill. Introduce a
	corresponding option 'set term post ... {no}level2'.  Setting level2
	to false either via 'set term' or by editing the output PostScript file
	accommodates older printers and older versions of Adobe Illustrator.

2004-07-31  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (PS_common_init PS_put_text ENHPS_put_text):
	Check for black text only option in the PostScript code itself, 
	rather than at the time the plot is generated. This allows you to
	change your mind later by editing one line in the PostScript file.

2004-07-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/show.c (show_key): Fix memory leak by making the variable in