@@ -1,5 +1,5 @@
 /*
- * $Id: contour.h,v 1.8 2004/07/01 17:10:04 broeker Exp $
+ * $Id: contour.h,v 1.9 2004/08/09 00:51:29 sfeam Exp $
  */
 
 /* GNUPLOT - contour.h */
@@ -72,7 +72,7 @@ typedef double tri_diag[3];
 
 /* Variables of contour.c needed by other modules: */
 
-extern char contour_format[];
+extern char contour_format[32];
 extern t_contour_kind contour_kind;
 extern t_contour_levels_kind contour_levels_kind;
 extern int contour_levels;
